--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
     <title>Shop</title>
   </head>
   <body>
@@ -20,26 +20,40 @@
         />
         <span class="icon-wrapper">
           <div class="cart">
-            <ion-icon name="cart-outline"></ion-icon>
+            <ion-icon name="cart-outline" class="icon"></ion-icon>
             <span class="icon-text">Your Cart</span>
           </div>
           <div class="account">
-          <ion-icon name="person-circle-outline"></ion-icon
-          ><span class="icon-text"> Account</span>
+            <ion-icon
+              name="person-circle-outline"
+              class="icon"
+              style="padding: 0 1.1rem"
+            ></ion-icon
+            ><span class="icon-text">Account</span>
           </div>
         </span>
       </nav>
     </div>
+    <div class="filter-container">
+      <div class="category-head">
+        <ul>
+          <div class="category-title">
+            <li>Home</li>
+          </div>
+          <div class="category-title">
+            <li>Men</li>
+          </div>
+          <div class="category-title">
+            <li>Women</li>
+          </div>
+          <div class="category-title">
+            <li>Gadgets</li>
+          </div>
 
-
-
-
-
-
-
-
-
-
+        </ul>
+      </div>
+    </div>
+    <hr>
 
     <script
       type="module"
