--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <span class="icon-wrapper">
           <div class="cart">
             <ion-icon name="cart-outline" class="icon"></ion-icon>
-            <span class="icon-text">Your Cart</span>
+            <span class="icon-text">Cart</span>
           </div>
           <div class="account">
             <ion-icon
@@ -38,22 +38,22 @@
       <div class="category-head">
         <ul>
           <div class="category-title">
-            <li>Home</li>
+            <li class="active list-item">Home</li>
           </div>
           <div class="category-title">
-            <li>Men</li>
+            <li class="list-item">Keyboards</li>
           </div>
           <div class="category-title">
-            <li>Women</li>
+            <li class="list-item">Computers</li>
           </div>
           <div class="category-title">
-            <li>Gadgets</li>
+            <li class="list-item">Laptops</li>
           </div>
 
         </ul>
       </div>
     </div>
-    <hr>
+    <hr class="hr-opacity">
 
     <script
       type="module"
@@ -63,5 +63,6 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
+    <script src="cart.js"></script>
   </body>
 </html>
