--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="main.js" defer></script>
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
     <title>Shop</title>
   </head>
@@ -16,38 +17,24 @@
           type="search"
           name="search"
           id="search"
-          placeholder="Search here"
+          placeholder=" Search here"
         />
-        <span class="icon-wrapper">
-          <div class="cart">
-            <ion-icon name="cart-outline" class="icon"></ion-icon>
-            <span class="icon-text">Cart</span>
-          </div>
-          <div class="account">
-            <ion-icon
-              name="person-circle-outline"
-              class="icon"
-              style="padding: 0 1.1rem"
-            ></ion-icon
-            ><span class="icon-text">Account</span>
-          </div>
-        </span>
       </nav>
     </div>
     <div class="filter-container">
       <div class="category-head">
         <ul>
           <div class="category-title">
-            <li class="active list-item">Home</li>
+            <li class="active list-item hover-underline-animation">Home</li>
           </div>
           <div class="category-title">
-            <li class="list-item">Keyboards</li>
+            <li class="list-item hover-underline-animation">Keyboards</li>
           </div>
           <div class="category-title">
-            <li class="list-item">Computers</li>
+            <li class="list-item hover-underline-animation">Computers</li>
           </div>
           <div class="category-title">
-            <li class="list-item">Laptops</li>
+            <li class="list-item hover-underline-animation">Laptops</li>
           </div>
 
         </ul>
