--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
           placeholder=" Search here"
         />
       </nav>
+      <hr>
     </div>
     <div class="filter-container">
       <div class="category-head">
         <ul>
           <div class="category-title">
-            <li class="active list-item hover-underline-animation">Home</li>
+            <li class="list-item hover-underline-animation">Home</li>
           </div>
           <div class="category-title">
             <li class="list-item hover-underline-animation">Keyboards</li>
@@ -50,6 +51,5 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
-    <script src="cart.js"></script>
   </body>
 </html>
