css styles for card

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           placeholder=" Search here"
         />
       </nav>
-      <hr>
+      <hr class="hr-opacity">
     </div>
     <div class="filter-container">
       <div class="category-head">
